--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </nav>
   <div class="container">
     <div class="image-container">
-      <img src="https://t4.ftcdn.net/jpg/07/78/33/73/360_F_778337308_Df9ifwfSsjaDwah7wFXRVHawSn8euos1.jpg" alt="Cartoon Web Developer" />
+      <img src="https://media.craiyon.com/2025-04-07/91CK_RsaQLeK1wOO4qn5sA.webp" alt="Cartoon Web Developer" />
     </div>
     <div class="content">
-      <h1>I'm Johnathan Myll</h1>
+      <h1>I'm Chinkal Malviya </h1>
       <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">"Building the web , one pixel at a time."</p>
       <div id="bio" class="section">
         <h2>Bio</h2>
@@ -30,16 +30,17 @@
           <li>HTML, CSS, JavaScript,Python,C</li>
           <li>UI UX Design</li>
           <li>Responsive Design</li>
-          <li>Node.js and PhP</li>
+         
         </ul>
       </div>
       <div id="experience" class="section">
         <h2>Experience</h2>
-        <p>3 years as a front-end developer at Techno Gate.</p>
+        <p>Motivated and detail-oriented Computer Science Engineering student with strong skills in programming, web development, and UI/UX design. Passionate about building efficient digital solutions and applying technical skills to solve
+          real-world problems.</p>
       </div>
       <div id="contact" class="section">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:johnathanmyll@example.com">johndoe@example.com</a></p>
+        <p>Email: <a href="mailto:cchinkalmalviya224@gmail.com">cchinkalmalviya224@gmail.com</a></p>
       </div>
     </div>
   </div>
